Star Wars Theme
Much more exciting gameplay! Changed tile images and background. Added
sound file.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
     <p>
     Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
+
+    <p>
+    <center>
+      <audio controls="" autoplay="" name="media" loop>
+        <source src="http://www.dws.org/download/oct2010/04-Star%20Wars-Imperial%20March.mp3" type="audio/mpeg">
+      </audio>
+    </center>
+    </p>
+    
   </div>
 
   <script src="js/bind_polyfill.js"></script>
